--- a/khoBlog/templates/account/profile.html
+++ b/khoBlog/templates/account/profile.html
@@ -14,7 +14,7 @@
         <div class="row g-0">
             <div class="col-md-4">
                 {% if object.profile_pic %}
-                    <img class="w-50 p-2" src="{{ object.profile_pic.url }}" alt="Profile Pic of {{ object.username }}" />
+                    <img class="w-50 p-2" src="{{ object.profile_pic.url }}" alt="Profile Pic of {{ object.username }}" loading="lazy" />
                 {% endif %}
             </div>
             <div class="col-md-8">
