--- a/khoBlog/static/khoBlog/css/main.scss
+++ b/khoBlog/static/khoBlog/css/main.scss
@@ -149,6 +149,11 @@ textarea {
     }
 }
 
+.profile-pic {
+    width: 100%;
+    max-height: 40px;
+}
+
 @media (max-width: 991.98px) {
     .offcanvas-collapse {
         position: fixed;
