--- a/khoBlog/static/khoBlog/css/main.scss
+++ b/khoBlog/static/khoBlog/css/main.scss
@@ -150,8 +150,7 @@ textarea {
 }
 
 .profile-pic {
-    width: 100%;
-    max-height: 40px;
+    max-width: 15px;
 }
 
 @media (max-width: 991.98px) {
