well the bug is back but at least the nav bar works

--- a/khoBlog/static/khoBlog/css/main.scss
+++ b/khoBlog/static/khoBlog/css/main.scss
@@ -22,6 +22,7 @@ label[for="id_honeypot"],
 }
 
 body {
+    padding-top: 56px !important;
     @include background-color("bg");
     @include color("text");
 
