navbar for unlogged users is big too

--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -131,7 +131,7 @@
                 </div>
 
                 {% activeurl %}
-                    <ul class="navbar-nav me-auto d-flex"></ul>
+                    <ul class="navbar-nav me-auto d-flex nav-item invisible"><span class="nav-link">Bar is large</span></ul>
                 {% endactiveurl %}
 
                 {% if user.is_authenticated %}
