--- a/khoBlog/static/khoBlog/css/_custom.scss
+++ b/khoBlog/static/khoBlog/css/_custom.scss
@@ -21,153 +21,177 @@ $font-family-monospace: $monospace;
 /* Elements personalization */
 
 .active {
-  @include color("active-color");
-  @include background-color("bg");
-  @include border-color("border-color");
+    @include color("active-color");
+    @include background-color("bg");
+    @include border-color("border-color");
 
-  &:hover {
-    color: white !important;
-  }
+    &:hover {
+        color: white !important;
+    }
+}
+
+.pagination {
+    .page-item {
+        .page-link {
+            @include color("text");
+            @include background-color("bg");
+            @include border-color("border-color");
+
+            &:hover {
+                color: $white;
+                background-color: $primary;
+            }
+        }
+
+        &.active .page-link {
+            background-color: white !important;
+
+            &:hover {
+                @include color("text");
+                @include background-color("bg");
+            }
+        }
+    }
 }
 
 .card {
-  @include color("text");
-  @include background-color("bg");
-  @include border-color("border-color");
-
-  & .list-group {
     @include color("text");
     @include background-color("bg");
     @include border-color("border-color");
 
-    &-item {
-      @include color("text");
-      @include background-color("bg");
-      @include border-color("border-color");
+    & .list-group {
+        @include color("text");
+        @include background-color("bg");
+        @include border-color("border-color");
+
+        &-item {
+            @include color("text");
+            @include background-color("bg");
+            @include border-color("border-color");
+        }
     }
-  }
 
-  .cat-link {
-    @include color("side-link");
+    .cat-link {
+        @include color("side-link");
 
-    &:hover {
-      @include color("side-link");
-      text-decoration: underline;
+        &:hover {
+            @include color("side-link");
+            text-decoration: underline;
+        }
     }
-  }
 
-  & .list-unstyled a {
-    @include color("side-link");
+    & .list-unstyled a {
+        @include color("side-link");
 
-    &:hover {
-      @include color("side-link");
-      text-decoration: underline;
+        &:hover {
+            @include color("side-link");
+            text-decoration: underline;
+        }
     }
-  }
 
-  &-header,
-  &-footer {
-    @include color("text");
-    @include background-color("bg");
-    @include border-color("border-color");
-  }
-
-  &-link {
-    @include color("link");
-
-    &:hover {
-      text-decoration: underline;
+    &-header,
+    &-footer {
+        @include color("text");
+        @include background-color("bg");
+        @include border-color("border-color");
     }
-  }
+
+    &-link {
+        @include color("link");
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 .modal-content {
-  @include color("text");
-  @include background-color("bg");
-  @include border-color("border-color");
-
-  & .modal-footer,
-  & .modal-header,
-  & .modal-body,
-  & .nav-tabs {
+    @include color("text");
+    @include background-color("bg");
     @include border-color("border-color");
-  }
+
+    & .modal-footer,
+    & .modal-header,
+    & .modal-body,
+    & .nav-tabs {
+        @include border-color("border-color");
+    }
 }
 
 .form-check {
-  display: inline-block;
-  min-height: $form-check-min-height;
-  padding-left: $form-check-padding-start;
-  margin-bottom: $form-check-margin-bottom;
+    display: inline-block;
+    min-height: $form-check-min-height;
+    padding-left: $form-check-padding-start;
+    margin-bottom: $form-check-margin-bottom;
 
-  .form-check-input {
-    float: none !important;
-    margin-left: $form-check-padding-start * -0.9;
-  }
+    .form-check-input {
+        float: none !important;
+        margin-left: $form-check-padding-start * -0.9;
+    }
 }
 
 .offcanvas {
-  @include color("text");
-  @include background-color("bg");
-  @include border-color("border-color");
-
-  &-header,
-  &-body {
+    @include color("text");
+    @include background-color("bg");
     @include border-color("border-color");
-  }
+
+    &-header,
+    &-body {
+        @include border-color("border-color");
+    }
 }
 
 .navbar,
 .nav-scroller {
-  @include background-color("bg");
-  @include border-color("border-color");
+    @include background-color("bg");
+    @include border-color("border-color");
 
-  & .nav-link,
-  & .navbar-brand {
-    &.active {
-      @include color("active-color");
-      @include background-color("bg");
-      @include border-color("border-color");
+    & .nav-link,
+    & .navbar-brand {
+        &.active {
+            @include color("active-color");
+            @include background-color("bg");
+            @include border-color("border-color");
 
-      &:hover {
-        color: white !important;
-      }
+            &:hover {
+                color: white !important;
+            }
+        }
+
+        @include color("menu-link");
+
+        &:hover {
+            @include color("menu-link");
+            text-decoration: underline !important;
+        }
     }
-
-    @include color("menu-link");
-
-    &:hover {
-      @include color("menu-link");
-      text-decoration: underline !important;
-    }
-  }
 }
 
 #main_search form.search_form,
 .search_form {
-  & *,
-  & .form-control {
-    @include color("text");
-    @include background-color("bg");
-  }
-
-  & .input-group-text {
-    border: 1px solid;
-    @include border-color("border-color");
-  }
-
-  & .form-control {
-    border: 1px solid;
-    @include border-color("border-color");
-
-    &:hover,
-    &:active {
-      @include color("text");
-      @include background-color("bg");
+    & *,
+    & .form-control {
+        @include color("text");
+        @include background-color("bg");
     }
-  }
+
+    & .input-group-text {
+        border: 1px solid;
+        @include border-color("border-color");
+    }
+
+    & .form-control {
+        border: 1px solid;
+        @include border-color("border-color");
+
+        &:hover,
+        &:active {
+            @include color("text");
+            @include background-color("bg");
+        }
+    }
 }
 
 .breadcrumb {
-  margin-bottom: 0px !important;
+    margin-bottom: 0px !important;
 }
