--- a/khoBlog/static/khoBlog/css/main.scss
+++ b/khoBlog/static/khoBlog/css/main.scss
@@ -21,6 +21,11 @@ label[for="id_honeypot"],
     display: none;
 }
 
+html,
+body {
+    overflow-x: hidden; /* Prevent scroll on narrow devices */
+}
+
 body {
     padding-top: 56px !important;
     @include background-color("bg");
