some design fixes

--- a/blog/templates/blog/base_post_card.html
+++ b/blog/templates/blog/base_post_card.html
@@ -44,7 +44,7 @@
         {% endblock card_header %}
     </header>
 
-    <section class="card-body">
+    <section class="card-body pb-0">
         {% block card_body %}
             {% if series %}
                 <article class="card shadow">
