--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -137,7 +137,7 @@
                 {% if user.is_authenticated %}
                     <div class="d-none d-md-flex d-none d-md-flex align-items-center">
                         <div class="flex-shrink-0 dropdown">
-                            <a href="#" class="d-block py-2 px-2 text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
+                            <a href="#" class="d-block px-2 text-decoration-none dropdown-toggle" id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
                                 {% if user.profile_pic %}
                                     <img class="rounded-circle" src="{{ user.profile_pic.url }}" alt="Profile Pic of {{ user.username }}" width="20" height="20" loading="lazy" />
                                 {% else %}
