--- a/blog/templates/blog/includes/post_categories.html
+++ b/blog/templates/blog/includes/post_categories.html
@@ -1,7 +1,10 @@
 {% for category in post.categories.all %}
   {% if not category.withdrawn or category.withdrawn and user.is_superuser %}
-    <a href="{{ category.get_absolute_url }}">{{ category|capfirst }}</a>
-    {% if not forloop.last %},
-    {% endif %}
+    {% spaceless %}
+      <a href="{{ category.get_absolute_url }}">{{ category|capfirst }}</a>
+      {% if not forloop.last %}
+        <span>,</span>
+      {% endif %}
+    {% endspaceless %}
   {% endif %}
 {% endfor %}
